--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My website
+title: Datos MacroEvo
 
 # Your name to show in the footer
-author: Cristian
+author: Cristian Roman
 
 ###############################################
 # --- List of links in the navigation bar --- #
