--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ author: Cristian Roman
 
 navbar-links:'
   Acerca: "aboutme"
-  Cursos:
+  Cursos: "https://beautifuljekyll.com"
     - Fechas: "https://beautifuljekyll.com"
     - Programacion: "https://beautifuljekyll.com"
     - Contenidos: "https://beautifuljekyll.com"
     - Politicas: "https://beautifuljekyll.com"
-    - Aplicaciones: https://beautifuljekyll.com"
+    - Aplicaciones: "https://beautifuljekyll.com"
   Logros: "https://beautifuljekyll.com"
   Quienes somos: "quienes"
   
