--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: macrodata
 
 # Your name to show in the footer
-author: Cristian Roman
+author: Cristian Román-Palacios
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -29,7 +29,6 @@ navbar-links:
     - Aplicaciones: "https://beautifuljekyll.com"
   Logros: "https://beautifuljekyll.com"
   Quienes somos: "quienes"
-    
 
 ################
 # --- Logo --- #
