--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: macrodata
+title: MacroData
 
 # Your name to show in the footer
-author: Cristian Román-Palacios
+author: Cristian Román
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -264,7 +264,7 @@ date_format: "%B %-d, %Y"
 #################################################################################
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Toronto"
+timezone: "America/Phoenix"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
