--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ navbar-links:
   El proyecto: "aboutme"
   Cursos:
     - Fechas: "fechas"
-    - Programacion: "programacion"
+    - Objetivos: "objetivos"
     - Contenidos: "contenidos"
     - Politicas: "politicas"
     - Aplicaciones: "aplicaciones"
